--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceItemsReport.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/ProfileInvoiceItemsReport.rdlc
@@ -181,9 +181,9 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.08332in</Top>
-        <Left>3.47656in</Left>
-        <Height>0.20833in</Height>
+        <Top>3.1in</Top>
+        <Left>2.26634in</Left>
+        <Height>0.21in</Height>
         <Width>0.81284in</Width>
         <ZIndex>5</ZIndex>
         <Style>
@@ -214,19 +214,19 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.49966in</Width>
+              <Width>1.5in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.76947in</Width>
+              <Width>0.72593in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.10693in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.84652in</Width>
+              <Width>0.74608in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.89037in</Width>
+              <Width>0.88745in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>0.72117in</Width>
@@ -235,10 +235,13 @@
               <Width>0.84005in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.47099in</Width>
+              <Width>0.40396in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.68542in</Width>
+              <Width>0.85in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -570,6 +573,51 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox1">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=iif(Parameters!DisplayCommission.Value = true,"Net Amount","Amount")</Value>
+                              <Style>
+                                <FontFamily>Verdana</FontFamily>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox1</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Color>Black</Color>
+                        </BottomBorder>
+                        <LeftBorder>
+                          <Style>None</Style>
+                        </LeftBorder>
+                        <RightBorder>
+                          <Style>None</Style>
+                        </RightBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
             <TablixRow>
@@ -854,6 +902,39 @@
                     </Textbox>
                   </CellContents>
                 </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox12">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!AmountAfterCommission.Value</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox12</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
               </TablixCells>
             </TablixRow>
           </TablixRows>
@@ -868,6 +949,11 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember>
+              <Visibility>
+                <Hidden>= iif(Parameters!DisplayCommission.Value = True, false, true)</Hidden>
+              </Visibility>
+            </TablixMember>
             <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
@@ -887,7 +973,7 @@
         <Top>2.44271in</Top>
         <Left>0.04041in</Left>
         <Height>0.46875in</Height>
-        <Width>7.83058in</Width>
+        <Width>7.78157in</Width>
         <ZIndex>7</ZIndex>
         <Style>
           <Border>
@@ -1158,10 +1244,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.06943in</Top>
-        <Left>4.2894in</Left>
-        <Height>0.19445in</Height>
-        <Width>0.88121in</Width>
+        <Top>3.1in</Top>
+        <Left>3.11935in</Left>
+        <Height>0.21in</Height>
+        <Width>0.90134in</Width>
         <ZIndex>15</ZIndex>
         <Style>
           <Border>
@@ -1188,10 +1274,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.08331in</Top>
-        <Left>5.17061in</Left>
-        <Height>0.19445in</Height>
-        <Width>0.71841in</Width>
+        <Top>3.1in</Top>
+        <Left>4.02069in</Left>
+        <Height>0.21in</Height>
+        <Width>0.72117in</Width>
         <ZIndex>16</ZIndex>
         <Style>
           <Border>
@@ -1220,10 +1306,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.04167in</Top>
-        <Left>7.164in</Left>
-        <Height>0.19445in</Height>
-        <Width>0.68266in</Width>
+        <Top>3.1in</Top>
+        <Left>6.01365in</Left>
+        <Height>0.21in</Height>
+        <Width>0.85264in</Width>
         <ZIndex>17</ZIndex>
         <Style>
           <Border>
@@ -1252,11 +1338,48 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>3.04167in</Top>
-        <Left>6.69577in</Left>
-        <Height>0.19445in</Height>
-        <Width>0.46823in</Width>
+        <Top>3.1in</Top>
+        <Left>5.58191in</Left>
+        <Height>0.21in</Height>
+        <Width>0.40396in</Width>
         <ZIndex>18</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox19">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Microsoft.VisualBasic.Strings.FormatNumber(Parameters!TotalAmountAfterCommission.Value, 0)</Value>
+                <Style>
+                  <FontFamily>Verdana</FontFamily>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Right</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox2</rd:DefaultName>
+        <Top>3.1in</Top>
+        <Left>6.90796in</Left>
+        <Height>0.21in</Height>
+        <Width>0.93162in</Width>
+        <ZIndex>19</ZIndex>
+        <Visibility>
+          <Hidden>=Microsoft.VisualBasic.Interaction.iif(Parameters!DisplayCommission.Value = True, False, True)</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1396,10 +1519,18 @@
         </Field>
         <Field Name="SaleRateTypeId">
           <DataField>SaleRateTypeId</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
+          <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
         </Field>
         <Field Name="SaleRateTypeIdDescription">
           <DataField>SaleRateTypeIdDescription</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="SaleRate">
+          <DataField>SaleRate</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="SaleRateDescription">
+          <DataField>SaleRateDescription</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="NumberOfCalls">
@@ -1418,10 +1549,6 @@
           <DataField>Duration</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
-        <Field Name="SaleRate">
-          <DataField>SaleRate</DataField>
-          <rd:TypeName>System.Decimal</rd:TypeName>
-        </Field>
         <Field Name="FromDate">
           <DataField>FromDate</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
@@ -1429,6 +1556,14 @@
         <Field Name="ToDate">
           <DataField>ToDate</DataField>
           <rd:TypeName>System.DateTime</rd:TypeName>
+        </Field>
+        <Field Name="SaleRateAfterCommission">
+          <DataField>SaleRateAfterCommission</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="AmountAfterCommission">
+          <DataField>AmountAfterCommission</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
@@ -1501,6 +1636,17 @@
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="TotalAmount">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="DisplayCommission">
+      <DataType>Boolean</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="TotalAmountAfterCommission">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
