--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SwitchReleaseCause/Templates/SwitchReleaseCauseGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SwitchReleaseCause/Templates/SwitchReleaseCauseGridTemplate.html
@@ -1,1 +1,13 @@
-﻿
+﻿<vr-datagrid datasource="switcheReleaseCauses"
+             on-ready="onGridReady"
+             dataretrievalfunction="dataRetrievalFunction"
+             pagingtype="'PagingOnScroll'"
+             menuactions="gridMenuActions">
+    <vr-datagridcolumn headertext="'ID'" field="'SwitchReleaseCauseId'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Release Code'" field="'ReleaseCode'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Switch Name'" field="'SwitchName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Description'" field="'Description'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Delivered'" field="'IsDelivered'" type="'Text'"><vr-icon icontype="dataItem.IsDelivered"></vr-datagridcolumn>
+
+
+</vr-datagrid>
