--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseEditor.html
@@ -1,1 +1,29 @@
-﻿
+﻿<div vr-modalcontent ng-controller="WhS_BE_SwitchReleaseCauseEditorController" vr-loader="scopeModel.isLoading" width="'50%'">
+    <vr-modalbody>
+        <vr-row>
+            <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="6" isrequired="true" hideremoveicon="true"></vr-whs-be-switch-selector>
+            <vr-columns colnum="6">
+                <vr-textbox value="scopeModel.releaseCode" label="Release Code" isrequired="true"></vr-textbox>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns colnum="6">
+                <vr-textbox value="scopeModel.description" label="Description"></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="6">
+                <vr-switch value="scopeModel.isDelivered" label="Delivered"></vr-switch>
+            </vr-columns>
+</vr-row>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+
+
+                <vr-button type="Save" data-onclick="scopeModel.save" ></vr-button>
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+            </div>
+        </vr-actionbar>
+
+    </div>
+</div>
