added DataSourceID and BatchDescription to QueueItem
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43801

--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader/Templates/QueueItemHeaderGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader/Templates/QueueItemHeaderGridTemplate.html
@@ -4,7 +4,7 @@
              on-ready="gridReady"
              defaultsortbyfieldname="'Entity.ItemId'"
              idfield="Entity.ItemId" enableautoexport="true">
-    <vr-datagridcolumn headertext="'Item Id'" field="'Entity.ItemId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" field="'Entity.ItemId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Stage Name'" field="'StageName'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Status'" field="'Entity.ExecutionStatusDescription'" getcolor="getStatusColor" fixedwidth="'100'"></vr-datagridcolumn>
