--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader2/Templates/QueueItemHeader2Grid.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader2/Templates/QueueItemHeader2Grid.html
@@ -3,14 +3,16 @@
              pagingtype="'PagingOnScroll'"
              defaultsortbyfieldname="'Entity.QueueId'"
              on-ready="ongridReady"
-             idfield="Entity.QueueId">
+             idfield="Entity.QueueId" normalcell>
     <vr-datagridcolumn headertext="'ID'" field="'Entity.ItemId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Execution Flow'" field="'ExecutionFlowName'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Queue Instance'" field="'QueueTitle'" disablesorting></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Status'" field="'StatusName'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Stage'" field="'StageName'" disablesorting></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Error Message'" field="'Entity.ErrorMessage'" disablesorting expendablecolumn></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Last Updated Time'" field="'Entity.LastUpdatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Data Source'" field="'DataSourceName'" disablesorting></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Imported Batch'" field="'Entity.BatchDescription'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Status'" field="'StatusName'" disablesorting fixedwidth="'70'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Error Message'" field="'Entity.ErrorMessage'" disablesorting expendablecolumn></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'70'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Last Updated Time'" field="'Entity.LastUpdatedTime'" type="'LongDatetime'" fixedwidth="'70'"></vr-datagridcolumn>
 </vr-datagrid>
