added DataSourceID and BatchDescription to QueueItem
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43802

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceGridTemplate.html
@@ -5,6 +5,7 @@
              menuactions="gridMenuActions"
              idfield="Entity.DataSourceId">
 
+    <vr-datagridcolumn headertext="'ID'" field="'Entity.DataSourceId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type'" field="'AdapterInfo.Title'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Scheduler Task Enabled'" field="'Entity.IsEnabled'">
