--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticConfig/Templates/AnalyticMeasureGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticConfig/Templates/AnalyticMeasureGridTemplate.html
@@ -5,6 +5,7 @@
              menuactions="gridMenuActions"
              idfield="AnalyticItemConfigId">
 
+    <vr-datagridcolumn headertext="'ID'" field="'AnalyticItemConfigId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Title'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
