--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticTable/Templates/AnalyticTableGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticTable/Templates/AnalyticTableGridTemplate.html
@@ -6,6 +6,7 @@
              idfield="Entity.AnalyticTableId"
              >
 
+    <vr-datagridcolumn headertext="'ID'" field="'Entity.AnalyticTableId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
