Add  maxvalue="10000" for days count
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43808

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/SwapDealSettings/Templates/SwapDealSettingsEditorTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/SwapDealSettings/Templates/SwapDealSettingsEditorTemplate.html
@@ -1,7 +1,7 @@
 ﻿<vr-tabs>
     <vr-tab header="'General'">
         <vr-columns width="1/2row">
-            <vr-textbox label="Grace Period" value="scopeModel.gracePeriod" type="number" isrequired="true"></vr-textbox>
+            <vr-textbox label="Grace Period" value="scopeModel.gracePeriod" type="number" isrequired="true" maxvalue="10000"></vr-textbox>
         </vr-columns>
     </vr-tab>
 	<vr-tab header="'Inbound'">
