--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
@@ -19,13 +19,13 @@
             <vr-row>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Numbering Plan" type="number"
-                                value="ctrl.effectiveDateDayOffset" minvalue="0"
+                                value="ctrl.effectiveDateDayOffset" minvalue="0" maxvalue="10000"
                                 ng-if="ctrl.showEffectiveDateDayOffset"
                                 isrequired="ctrl.isEffectiveDateDayOffset"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Retroactive" type="number"
-                                value="ctrl.retroactiveDayOffset" minvalue="0"
+                                value="ctrl.retroactiveDayOffset" minvalue="0" maxvalue="10000"
                                 ng-if="ctrl.showRetroactiveDayOffset"
                                 isrequired="ctrl.isRetroactiveDayOffset"></vr-textbox>
                 </vr-columns>
@@ -33,7 +33,7 @@
             <vr-row>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Sell Country" type="number"
-                                value="ctrl.newRateDayOffset" minvalue="0"
+                                value="ctrl.newRateDayOffset" minvalue="0" maxvalue="10000"
                                 ng-if="ctrl.showNewRateDayOffset"
                                 isrequired="ctrl.isNewRateDayOffset"></vr-textbox>
                 </vr-columns>
@@ -42,19 +42,19 @@
                                 label="End Country"
                                 type="number"
                                 value="ctrl.endCountryDayOffset"
-                                minvalue="0"
+                                minvalue="0" maxvalue="10000"
                                 isrequired="ctrl.isEndCountryDayOffsetRequired">
                     </vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Increased Rate" type="number"
-                                value="ctrl.increasedRateDayOffset" minvalue="0"
+                                value="ctrl.increasedRateDayOffset" minvalue="0" maxvalue="10000"
                                 ng-if="ctrl.showIncreasedRateDayOffset"
                                 isrequired="ctrl.isIncreasedRateDayOffset"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Decreased Rate" type="number"
-                                value="ctrl.decreasedRateDayOffset" minvalue="0"
+                                value="ctrl.decreasedRateDayOffset" minvalue="0" maxvalue="10000"
                                 ng-if="ctrl.showDecreasedRateDayOffset"
                                 isrequired="ctrl.isDecreasedRateDayOffset"></vr-textbox>
                 </vr-columns>
