--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PurchaseAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PurchaseAreaSettingsTemplate.html
@@ -1,10 +1,10 @@
 ﻿<vr-columns width="fullrow">
     <vr-row>
         <vr-columns width="1/2row">
-            <vr-textbox label="Effective Date Day Offset" type="number" value="ctrl.effectiveDateDayOffset" minvalue="0" isrequired="true"></vr-textbox>
+            <vr-textbox label="Effective Date Day Offset" type="number" value="ctrl.effectiveDateDayOffset" minvalue="0" maxvalue="10000" isrequired="true"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
-            <vr-textbox label="Retroactive Day Offset" value="ctrl.retroactiveDayOffset" minvalue="0" decimalprecision="0" type="number" isrequired="true"></vr-textbox>
+            <vr-textbox label="Retroactive Day Offset" value="ctrl.retroactiveDayOffset" minvalue="0" maxvalue="10000" decimalprecision="0" type="number" isrequired="true"></vr-textbox>
         </vr-columns>
        
     </vr-row>
