--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -134,7 +134,7 @@
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox value="scopeModel.supplierEffectiveDateDayOffset" label="Effective Date Day Offset" type="number" minvalue="0"></vr-textbox>
+                            <vr-textbox value="scopeModel.supplierEffectiveDateDayOffset" label="Effective Date Day Offset" type="number" minvalue="0" maxvalue="10000"></vr-textbox>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
