Adding upload Switch Release Cause files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43809

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseManagement.html
@@ -17,8 +17,9 @@
         <vr-row>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Add" data-onclick="scopeModel.addNewSwitchReleaseCause"></vr-button>
                     <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.searchClicked"></vr-button>
+                    <vr-button type="Add" data-onclick="scopeModel.addNewSwitchReleaseCause"></vr-button>
+                    <vr-button type="Upload" data-onclick="scopeModel.uploadSwitchReleaseCause">
                 </div>
             </vr-actionbar>
         </vr-row>
