Allowed the user to click on the Message field to view the entire message in a separate page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43845

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageMonitorGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPValidationMessage/Templates/BPValidationMessageMonitorGridTemplate.html
@@ -8,6 +8,6 @@
         <vr-datagridcolumn headertext="'Target Key'" field="'Entity.TargetKey'" type="'Text'" disablesorting="true"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Target Type'" field="'Entity.TargetType'" type="'Text'" disablesorting="true"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="5" getcolor="getSeverityColor" disablesorting="true"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Message'" field="'Entity.Message'" type="'Text'" disablesorting="true"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Message'" field="'Entity.Message'" type="'Text'" disablesorting="true" expendablecolumn></vr-datagridcolumn>
     </vr-datagrid>
 </div>
